@@ -26,13 +26,13 @@ bdftopcf_LDADD  = @BDFTOPCF_LIBS@
 
 bdftopcf_SOURCES = bdftopcf.c
 
-appman_SOURCES = bdftopcf.man
+appman_PRE = bdftopcf.man
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST = $(appman_SOURCES)
+EXTRA_DIST = $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
